# simple-dhcpd

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  REFACTORING_PLAN.md  REORGANIZATION_STATUS.md  ROADMAP.md  ROADMAP_CHECKLIST.md  SOURCE_STRUCTURE_PROPOSAL.md  TECHNICAL_DEBT.md  WELCOME.txt  simple-dhcpd.code-workspace
automation/: README.md
automation/ansible/: inventory-vmware.ini  inventory.ini  playbook-build.yml  playbook.yml  requirements.yml
automation/ansible/scripts/: build.sh  collect-packages.sh  organize-packages.sh  remote-build.sh  setup-remote.sh  vm-build  vm-test
automation/ci/: .travis.yml  Jenkinsfile
automation/docker/: Dockerfile
automation/docker/examples/: README.md  docker-compose.yml
automation/vagrant/: Vagrantfile
build-test/: Makefile  simple-dhcpd
build-test/tests/: Makefile
config/examples/: README.md  minimal.yaml
config/examples/advanced/: README.md  multi-vlan.yaml
config/examples/production/: README.md
config/examples/security/: README.md
config/examples/simple/: README.md
deployment/: README.md  distribution.xml
deployment/freebsd/: simple-dhcpd  simple-dhcpd.newsyslog
deployment/launchd/: com.simpledaemons.simple-dhcpd.plist
deployment/logrotate.d/: {{PROJECT_NAME}}
deployment/systemd/: {{PROJECT_NAME}}.service
deployment/windows/: {{PROJECT_NAME}}.service
docs/: README.md
docs/datacenter/: README.md  cloud.md  installation.md  multi-site.md  plugins.md  scaling.md
docs/deployment/: backup-procedures.md  monitoring.md
docs/development/: BUILD_GUIDE.md  README.md  SETUP.md
docs/diagrams/: architecture.md  data-flow.md  deployment.md  flow.md  security.md
docs/enterprise/: README.md  configuration.md  high-availability.md  installation.md  integrations.md  management.md  operations.md  performance.md  security.md
docs/getting-started/: installation.md  quick-start.md
docs/production/: README.md  configuration.md  deployment.md  operations.md  performance.md  security.md
docs/shared/configuration/: README.md
docs/shared/deployment/: deployment-guide.md  maintenance-procedures.md
docs/shared/diagrams/: README.md  architecture.md  deployment.md
docs/shared/troubleshooting/: README.md
docs/shared/user-guide/: cli.md  security-best-practices.md
docs/troubleshooting/: README.md
docs/user-guide/: cli.md  performance-tuning.md
include/: advanced_lease_manager.hpp  config.hpp  dhcp_options_manager.hpp  dhcp_parser.hpp  dhcp_security_manager.hpp  dhcp_server.hpp  dhcp_types.hpp  lease_manager.hpp  logger.hpp
include/simple-dhcpd/config/: manager.hpp
include/simple-dhcpd/core/: parser.hpp  server.hpp  types.hpp
include/simple-dhcpd/core/lease/: manager.hpp
include/simple-dhcpd/core/network/: udp_socket.hpp
include/simple-dhcpd/core/utils/: logger.hpp  utils.hpp
include/simple-dhcpd/lease/: advanced_manager.hpp  manager.hpp
include/simple-dhcpd/options/: manager.hpp
include/simple-dhcpd/production/features/: advanced_manager.hpp
include/simple-dhcpd/production/security/: manager.hpp
include/simple-dhcpd/utils/: utils.hpp
main/: datacenter.cpp
packaging/: CMakeLists.cpack
packaging/assets/: conclusion.html  readme.html  welcome.html
packaging/linux/deb/: control  postinst  postrm  prerm
packaging/linux/rpm/: postinstall.sh  postuninstall.sh  preinstall.sh  preuninstall.sh  {PROJECT_NAME}.spec
packaging/macos/dmg/: create-dmg.sh
packaging/macos/pkg/: Distribution.xml  PackageInfo.xml
packaging/macos/pkg/scripts/: postinstall
packaging/windows/msi/: installer.wxs
packaging/windows/nsis/: installer.nsi
project/: FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  ROADMAP_CHECKLIST.md  TECHNICAL_DEBT.md
scripts/: build-dmg.sh  build-linux.sh  build-macos.sh  build-pkg.sh  build-windows.bat  mk-impl.sh  mk.sh  platform-env.sh
src/: advanced_lease_manager.cpp  config.cpp  dhcp_options_manager.cpp  dhcp_parser.cpp  dhcp_security_manager.cpp  dhcp_server.cpp  lease_manager.cpp  logger.cpp  main.cpp  udp_socket.cpp
src/core/config/: manager.cpp
src/core/dhcp/: parser.cpp  server.cpp
src/core/lease/: manager.cpp
src/core/network/: udp_socket.cpp
src/core/options/: manager.cpp
src/core/utils/: logger.cpp
src/production/features/: advanced_manager.cpp
src/production/security/: manager.cpp
src/simple-dhcpd/config/: manager.cpp
src/simple-dhcpd/core/: parser.cpp  server.cpp
src/simple-dhcpd/lease/: advanced_manager.cpp  manager.cpp
src/simple-dhcpd/network/: udp_socket.cpp
src/simple-dhcpd/options/: manager.cpp
src/simple-dhcpd/security/: manager.cpp
src/simple-dhcpd/utils/: logger.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_basic.hpp  test_config.cpp  test_dhcp_parser.cpp  test_dhcp_parser.hpp  test_integration.cpp  test_lease_manager.cpp  test_lease_manager.hpp  test_load.cpp  test_network.cpp  test_performance.cpp  test_runner.cpp  test_security.cpp  test_simple_dhcpd.cpp
